# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]


### Changed
- Response errors try to parse content to be UTF-8 encoded strings instead of raw bytes
- Successul response codes updated to an inclusive range of 200-208

## [0.0.1] - 2021-04-24

### Added
- Initial release

[unreleased]: https://github.com/jmgilman/rustify/compare/v0.1.0...HEAD
[0.1.0]: https://github.com/jmgilman/rustify/releases/tag/v0.1.0