@@ -1,4 +1,5 @@
 use crate::{enums::RequestType, errors::ClientError};
+use serde_json::Value;
 use std::ops::RangeInclusive;
 use url::Url;
 
@@ -55,6 +56,7 @@ pub trait Client {
 pub struct Request {
     pub url: Url,
     pub method: RequestType,
+    pub query: Vec<(String, Value)>,
     pub data: Vec<u8>,
 }
 
