@@ -7,10 +7,15 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+### Added
+- Query parameters can now be specified using the `query` attribute
 
 ### Changed
 - Response errors try to parse content to be UTF-8 encoded strings instead of raw bytes
 - Successul response codes updated to an inclusive range of 200-208
+
+### Fixed
+- The `builder` option can now be used with structs that have generics and lifetimes
 
 ## [0.0.1] - 2021-04-24
 
